# nimrodel

./: .gitignore  pyproject.toml
nimrodel_fixed/: _apifunction.py
